Bug 455736: Getting an app cache should not EnsureContentViewer().  r+sr=bz